--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-google-places-autocomplete": "^4.0.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
